- fixed pagejump targets in demo config (id_ prefix was missing) - fixed some design errors to corrent the look of the demo config in the metal-design - correct the metal-design rendering of "nowidget"-groups -> border removed

--- a/visu/designs/metal/basic.css
+++ b/visu/designs/metal/basic.css
@@ -166,11 +166,12 @@ body br
 
  iframe { border: none; }
 
-.navbar .widget  { border-width: 0 0 1px 0; }
  
 .navbar .widget .label {
 	float: none;
 	width: auto;
+}
+.navbar .widget .label > img {
 	position: absolute;
 	left: 0.2em;
 }
@@ -271,22 +272,40 @@ body br
 	text-align: left;
 	margin-left: 0.2em;
 }
-.group { 
+.group {
 	margin: 0.2em 0.5em;
+}
+.group.widget { 
 	border: 2px solid #B3B3B3;
 	border-radius: 1em;
+	-moz-border-radius: 1em;
+  	-webkit-border-radius: 1em;
 	overflow: hidden;
 }
 .navbar .group { 
 	margin: 0.2em 0 0.1em 0;
 	border-radius: 0;
+	-moz-border-radius: 0;
+  	-webkit-border-radius: 0;
+  	
 	border-top-right-radius: 1em;
+	-moz-border-top-right-radius: 1em;
+  	-webkit-border-top-right-radius: 1em;
+	
 	border-bottom-right-radius: 1em;
+	-moz-border-bottom-right-radius: 1em;
+  	-webkit-border-bottom-right-radius: 1em;
+  	
 	border-left: none;
 }
 .navbar .group.root {
 	border-top-right-radius: 0;
+	-moz-border-top-right-radius: 0;
+  	-webkit-border-top-right-radius: 0;
+  	
 	border-bottom-left-radius: 1em;
+	-moz-border-bottom-left-radius: 1em;
+  	-webkit-border-bottom-left-radius: 1em;
 	margin-top: 0;
 	border-top: none;
 	border-left: 2px solid #B3B3B3;
@@ -299,9 +318,18 @@ body br
 	padding: 0 1em;
 	margin: 0;
 	border: none;
-	border-radius: 1.1em;
+	border-radius: 1em;
+	-moz-border-radius: 1em;
+  	-webkit-border-radius: 1em;
+  	
 	border-bottom-left-radius: 0;
+	-moz-border-bottom-left-radius: 0;
+  	-webkit-border-bottom-left-radius: 0;
+  	
 	border-bottom-right-radius: 0;
+	-moz-border-bottom-right-radius: 0;
+	-webkit-border-bottom-right-radius: 0;
+	
 	color: #FFF;
 	font-weight: bold;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#999), to(#666)); /* Saf4+, Chrome */
@@ -313,7 +341,11 @@ body br
 }
 .navbar .group > div > h2 {
 	border-radius: 0;
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
 	border-top-right-radius: 1em;
+	-moz-border-top-right-radius: 1em;
+	-webkit-border-top-right-radius: 1em;
 	text-shadow: none;
 	background-color: #eeeeee;
 	color: #3E3E3E;
